# geant4-space-input-spectra

./: README.md  pyproject.toml  requirements.txt
example_spectra/Alphas/: AMS_201105_201108.ecsv  kuznetsov_2017_sunspots_0.ecsv
example_spectra/CXB/: gruber_1999.ecsv
example_spectra/Electrons/: PAMELA_200907-200912.ecsv
example_spectra/Protons/: PAMELA_200607-200912.ecsv
example_spectra/SPENVIS/: Nymmik_1996_Alphas.txt
geant4_space_input_spectra/: __init__.py  convert.py  flux.py  gruber_1999.py  kuznetsov_2017.py  plot_spectra.py
